# ss13-mcp

./: .agent-lock  .gitignore  Cargo.toml  README.md  test_mcp.sh
spacemandmm-patched/crates/dmm-tools/src/render_passes/: icon_smoothing_2020.rs  mod.rs  random.rs
src/: builder.rs  index.rs  main.rs  render.rs  rules.rs  state.rs  tools.rs
test-rules/: area-fixtures.js  doors.js  power.js  wall-mounts.js
