[package]
name = "ss13-map-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for SS13 map intelligence — spatial queries, validation rules, and AI-assisted mapping"

[dependencies]
# SpacemanDMM crates (DM parser + map tools)
# Using local patched copy — fixes smoothing_flags constant mismatch with current tgstation.
# TG moved SMOOTH_BITMASK from bit 1 to bit 0; upstream SpacemanDMM still has old layout.
dreammaker = { path = "spacemandmm-patched/crates/dreammaker" }
dmm-tools = { path = "spacemandmm-patched/crates/dmm-tools", features = ["png"] }

# MCP protocol
rmcp = { version = "0.16", features = ["server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Spatial indexing
foldhash = "0.2"
indexmap = "2"

# Rendering support
base64 = "0.22"
bumpalo = { version = "3", features = ["collections"] }

# Embedded JavaScript engine for rule DSL
rquickjs = { version = "0.11", features = ["full-async", "parallel"] }
ndarray = "0.15"
